--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -17,3 +17,6 @@ $background-white: #f6f9fc;
 $light-gray: rgb(139, 138, 138);
 $success: #00a61a;
 $error: #ff0000;
+$profile-text-color: #565656;
+$profile-text-color-hover: #1276d3;
+$profile-background-hover: #e4edf7;
