--- a/client/src/components/Modal/LoginModal/_loginModal.scss
+++ b/client/src/components/Modal/LoginModal/_loginModal.scss
@@ -41,6 +41,7 @@
                 & > input {
                     flex: 1;
                     border: none;
+                    padding: 0.68rem 0;
                     &:focus {
                         outline: none;
                     }
