--- a/client/src/components/Modal/RegistrationModal/_registration.scss
+++ b/client/src/components/Modal/RegistrationModal/_registration.scss
@@ -53,6 +53,7 @@
                     & > input {
                         flex: 1;
                         border: none;
+                        padding: 0.68rem 0;
                         &:focus {
                             outline: none;
                         }
