--- a/client/src/pages/_profile.scss
+++ b/client/src/pages/_profile.scss
@@ -31,6 +31,7 @@
                     border-radius: 4px;
                     font-weight: 600;
                     color: $profile-text-color;
+                    border: 1px solid transparent;
                     cursor: pointer;
                     &:hover {
                         background-color: $profile-background-hover;
@@ -55,10 +56,27 @@
                         }
                     }
                 }
+                .active {
+                    background-color: $profile-background-hover;
+                    color: $profile-text-color-hover;
+                    border: 1px solid $profile-text-color-hover;
+                    & > span {
+                        & > svg {
+                            path {
+                                fill: $profile-text-color-hover;
+                            }
+                        }
+                    }
+                }
             }
         }
         &--right {
             flex: 1;
+            background: #fff;
+            box-shadow: 0 2px 5px#e7e7e7;
+            border-radius: 4px;
+            margin-top: 1rem;
+            padding: 1.5rem 2rem;
         }
     }
 }
