--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -9,6 +9,9 @@
 @import "../components/AlertBox/alertBox";
 @import "../pages/profile";
 @import "../components/LoadingSpiner/loadingSpinner";
+@import "../components/Profile/Address/address";
+@import "../components/Profile/Information/information";
+@import "../components/Profile/Order/order";
 
 .App {
     position: relative;
