--- a/client/src/components/Profile/Information/_information.scss
+++ b/client/src/components/Profile/Information/_information.scss
@@ -5,4 +5,63 @@
         border-bottom: 1px solid #c8c8c8;
         padding-bottom: 0.5rem;
     }
+    &--wrapper {
+        .profile--form {
+            & > div {
+                display: flex;
+                margin: 1.5rem 0;
+                gap: 4rem;
+                .form-group {
+                    label {
+                        font-size: 14px;
+                        font-weight: 400;
+                        color: $profile-text-color;
+                    }
+                    .form-input {
+                        display: flex;
+                        justify-content: space-between;
+                        align-items: center;
+                        gap: 10px;
+                        height: 35px;
+                        width: 100%;
+                        padding: 5px 10px;
+                        margin-top: 8px;
+                        border-radius: 8px;
+                        border: 1px solid rgb(211, 211, 211);
+                        &:hover {
+                            border: 1px solid rgb(175, 175, 175);
+                            box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
+                        }
+                        &:focus {
+                            outline: none;
+                            border: 1px solid $red;
+                        }
+                        & > input {
+                            flex: 1;
+                            border: none;
+                            padding: 0.48rem 0;
+                            &:focus {
+                                outline: none;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .submit {
+            color: #fff;
+            padding: 0.7rem 3rem;
+            background-color: $red;
+            border: none;
+            border-radius: 8px;
+            margin-top: 1rem;
+            transition: 0.3s;
+            cursor: pointer;
+            &:hover {
+                transform: translateY(-1px);
+                box-shadow: 0 5px 10px #00000035;
+                background-color: $blue;
+            }
+        }
+    }
 }
