--- a/client/src/pages/_profile.scss
+++ b/client/src/pages/_profile.scss
@@ -23,7 +23,7 @@
             & > ul {
                 & > li {
                     display: flex;
-                    justify-content: start;
+                    justify-content: flex-start;
                     align-items: center;
                     gap: 15px;
                     margin: 1rem 0;
