profile information page completed

--- a/client/src/components/Profile/Information/_information.scss
+++ b/client/src/components/Profile/Information/_information.scss
@@ -24,6 +24,7 @@
                         gap: 10px;
                         height: 35px;
                         width: 100%;
+                        min-width: 190px;
                         padding: 5px 10px;
                         margin-top: 8px;
                         border-radius: 8px;
