--- a/client/src/styles/_globals.scss
+++ b/client/src/styles/_globals.scss
@@ -35,6 +35,12 @@ ul li {
     list-style: none;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 // common class use
 
 .container {
