--- a/client/src/pages/_profile.scss
+++ b/client/src/pages/_profile.scss
@@ -33,6 +33,17 @@
                     color: $profile-text-color;
                     border: 1px solid transparent;
                     cursor: pointer;
+                    &:last-child {
+                        color: $red;
+                        background-color: rgba(255, 0, 0, 0.04);
+                        & > span {
+                            & > svg {
+                                path {
+                                    fill: $red;
+                                }
+                            }
+                        }
+                    }
                     &:hover {
                         background-color: $profile-background-hover;
                         color: $profile-text-color-hover;
