--- a/client/src/components/Profile/Address/_address.scss
+++ b/client/src/components/Profile/Address/_address.scss
@@ -6,6 +6,54 @@
         padding-bottom: 0.5rem;
     }
     &--wrapper {
+        .address--info {
+            padding: 2rem 0;
+            .address--table {
+                width: 100%;
+                border-collapse: collapse;
+                thead {
+                    background: #fafafa;
+                    tr {
+                        border-bottom: 1px solid #dcdcdc;
+                        th {
+                            font-size: 14px;
+                            font-weight: 400;
+                            color: #757575;
+                            padding: 0.5rem;
+                            text-align: left;
+                        }
+                    }
+                }
+                tbody {
+                    tr {
+                        border-bottom: 1px solid #f2f2f2;
+                        td {
+                            padding: 1rem 1rem 1rem 0.5rem;
+                            font-size: 12px;
+                        }
+                        .default-address {
+                            font-size: 12px;
+                            color: #5e5e5e;
+                            background-color: rgba(0, 196, 0, 0.154);
+                            border: none;
+                            padding: 5px 10px;
+                            border-radius: 6px;
+                        }
+                        .edit--address {
+                            font-size: 14px;
+                            color: $red;
+                            cursor: pointer;
+                            border: none;
+                            background: transparent;
+                        }
+                    }
+                    transition: 0.2s ease-in-out;
+                    &:hover {
+                        background: #fafafa;
+                    }
+                }
+            }
+        }
         .address--form {
             // display: flex;
             margin: 1.5rem 0;
@@ -37,14 +85,9 @@
                         outline: none;
                         border: 1px solid $red;
                     }
-                    & > input {
-                        flex: 1;
-                        border: none;
-                        padding: 0.48rem 0;
-                        &:focus {
-                            outline: none;
-                        }
-                    }
+                }
+                .text-area {
+                    min-height: 60px;
                 }
             }
         }
@@ -56,11 +99,14 @@
             border-radius: 8px;
             margin-top: 1rem;
             transition: 0.3s;
+            border: 1px solid $red;
             cursor: pointer;
             &:hover {
                 transform: translateY(-1px);
                 box-shadow: 0 5px 10px #00000035;
-                background-color: $blue;
+                border: 1px solid $red;
+                background-color: #fff;
+                color: $red;
             }
         }
     }
