--- a/client/src/components/Profile/Information/_information.scss
+++ b/client/src/components/Profile/Information/_information.scss
@@ -46,24 +46,28 @@
                 }
             }
         }
-        .submit {
-            color: #fff;
-            padding: 0.5rem 3rem;
-            width: 135px;
-            background-color: $red;
-            border: none;
-            border-radius: 8px;
-            margin: 1rem 1rem 0 0;
-            font-size: 14px;
-            transition: 0.2s;
-            border: 1px solid $red;
-            cursor: pointer;
-            &:hover {
-                transform: translateY(-1px);
-                box-shadow: 0 5px 10px #00000035;
-                background-color: transparent;
-                color: $red;
+        .btn-wrapper {
+            display: flex;
+            gap: 25px;
+            .submit {
+                color: #fff;
+                padding: 0.5rem 2rem;
+                width: 135px;
+                background-color: $red;
+                border: none;
+                border-radius: 8px;
+                margin: 1rem 0;
+                font-size: 14px;
+                transition: 0.2s;
                 border: 1px solid $red;
+                cursor: pointer;
+                &:hover {
+                    transform: translateY(-1px);
+                    box-shadow: 0 5px 10px #00000035;
+                    background-color: transparent;
+                    color: $red;
+                    border: 1px solid $red;
+                }
             }
         }
     }
