--- a/client/src/components/Admin/Navigation/_navigation.scss
+++ b/client/src/components/Admin/Navigation/_navigation.scss
@@ -35,7 +35,10 @@
       &.active {
         background-color: $admin-light-bg;
         border-radius: 10px;
-        border: 1px solid $red;
+
+        span {
+          color: $red !important;
+        }
       }
       .MuiSvgIcon-root {
         &:nth-of-type(2) {
