--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -8,3 +8,4 @@
 @import "../components/Modal/ProductDetailsModal/productDetailsModal";
 @import "../components/Admin/admin";
 @import "../components/Admin/Navigation/navigation";
+@import "../components/Admin/Dashboard/adminDashboard";
