--- a/client/src/components/Admin/_admin.scss
+++ b/client/src/components/Admin/_admin.scss
@@ -1,6 +1,7 @@
 $admin-light-bg: #efeef3;
 $admin-card-bg: #ffffff;
 $admin-text: #1c1c1c;
+$admin-dark: #5f6c71;
 
 .admin {
   display: flex;
@@ -10,9 +11,9 @@ $admin-text: #1c1c1c;
     $admin-card-bg: #1c1c1c;
   }
   > div {
-    flex: 0.12;
+    flex: 0.15;
     &:nth-of-type(2) {
-      flex: 0.88;
+      flex: 1;
       background-color: $admin-light-bg;
     }
   }
