--- a/client/src/components/Profile/Address/_address.scss
+++ b/client/src/components/Profile/Address/_address.scss
@@ -7,7 +7,7 @@
     }
     &--wrapper {
         .address--info {
-            padding: 2rem 0;
+            padding-top: 2rem;
             .address--table {
                 width: 100%;
                 border-collapse: collapse;
@@ -28,8 +28,8 @@
                     tr {
                         border-bottom: 1px solid #f2f2f2;
                         td {
-                            padding: 1rem 1rem 1rem 0.5rem;
-                            font-size: 12px;
+                            padding: 1rem 0 1rem 0.5rem;
+                            font-size: 13px;
                         }
                         .default-address {
                             font-size: 12px;
@@ -40,13 +40,11 @@
                             border-radius: 6px;
                         }
                         .edit--address {
-                            font-size: 14px;
-                            color: $red;
+                            height: 30px;
+                            width: 30px;
+                            display: inline-block;
+                            border-radius: 50%;
                             cursor: pointer;
-                            border-radius: 4px;
-                            border: none;
-                            background: transparent;
-                            padding: 5px 10px;
                             transition: 0.2s;
                             &:hover {
                                 background: #fff;
@@ -56,7 +54,7 @@
                     }
                     transition: 0.2s ease-in-out;
                     &:hover {
-                        background: #fafafa;
+                        background: #fefefe;
                     }
                 }
             }
@@ -105,6 +103,7 @@
             border: 1px solid $error;
             border-radius: 4px;
             padding: 0.3rem 1rem;
+            margin: 10px 0;
         }
         .submit {
             color: #fff;
@@ -112,16 +111,26 @@
             background-color: $red;
             border: none;
             border-radius: 8px;
-            margin-top: 1rem;
             transition: 0.3s;
             border: 1px solid $red;
             cursor: pointer;
             &:hover {
                 transform: translateY(-1px);
-                box-shadow: 0 5px 10px #00000035;
+                box-shadow: 0 8px 15px #00000025;
                 border: 1px solid $red;
                 background-color: #fff;
                 color: $red;
+            }
+        }
+        .address--message {
+            padding: 2rem 0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 1.5rem;
+            & > span {
+                display: block;
+                color: #757575;
             }
         }
     }
