--- a/client/src/components/navbar/_navbar.scss
+++ b/client/src/components/navbar/_navbar.scss
@@ -163,36 +163,22 @@ $background-white-hover: #e2ecf5;
                     background: $background-white-hover;
                 }
                 //tooltip
-                &:hover::after {
-                    content: attr(data-tooltip);
-                    position: absolute;
-                    display: block;
-                    left: 50%;
-                    transform: translateX(-50%);
-                    bottom: -30px;
-                    background: #ffffff;
-                    box-shadow: 0 0 5px rgba(0, 0, 0, 0.18);
-                    border-radius: 0.5em;
-                    font-size: 14px;
-                    color: #808080;
-                    padding: 2px 10px;
-                    white-space: nowrap;
-                    z-index: 98;
-                }
-
-                &:hover::before {
-                    content: "";
-                    position: absolute;
-                    display: block;
-                    border: solid;
-                    border-color: rgb(0, 0, 0) transparent;
-                    border-color: rgba(0, 0, 0, 0.2) transparent;
-                    border-width: 0 0.4em 0.4em 0.4em;
-                    bottom: -6px;
-                    left: 50%;
-                    transform: translateX(-50%);
-                    z-index: 99;
-                }
+                // &:hover::after {
+                //     content: attr(data-tooltip);
+                //     position: absolute;
+                //     display: block;
+                //     left: 50%;
+                //     transform: translateX(-50%);
+                //     bottom: -30px;
+                //     background: #ffffff;
+                //     box-shadow: 0 0 5px rgba(0, 0, 0, 0.18);
+                //     border-radius: 0.5em;
+                //     font-size: 14px;
+                //     color: #808080;
+                //     padding: 2px 10px;
+                //     white-space: nowrap;
+                //     z-index: 95;
+                // }
             }
             .navicon--badge {
                 position: absolute;
@@ -205,9 +191,42 @@ $background-white-hover: #e2ecf5;
                 top: -7px;
                 right: -5px;
             }
+            .profile--dropdown {
+                position: absolute;
+                top: 50px;
+                left: -100%;
+                z-index: 99;
+                background-color: #fff;
+                padding: 10px 0;
+                box-shadow: 0 0 5px rgba(0, 0, 0, 0.18);
+                border-radius: 0.5em;
+                color: #808080;
+                &::before {
+                    content: "";
+                    position: absolute;
+                    display: block;
+                    border: solid;
+                    border-color: rgb(0, 0, 0) transparent;
+                    border-color: rgba(98, 98, 98, 0.2) transparent;
+                    border-width: 0 0.5em 0.5em 0.5em;
+                    top: -8px;
+                    left: 60px;
+                    transform: translateX(-50%);
+                    z-index: 99;
+                }
+                & > li {
+                    padding: 5px 15px;
+                    cursor: pointer;
+                    &:hover {
+                        // border-bottom: 1px solid #cccccc;
+                        color: $red;
+                    }
+                }
+            }
         }
     }
     .mouse-pointer {
+        cursor: pointer;
         pointer-events: none;
     }
     .rotate {
