--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -12,3 +12,4 @@
 @import "../components/Profile/Address/address";
 @import "../components/Profile/Information/information";
 @import "../components/Profile/Order/order";
+@import "../components/Home/Banner/topBanner";
