category dropdown added

--- a/client/src/components/navbar/_navbar.scss
+++ b/client/src/components/navbar/_navbar.scss
@@ -6,244 +6,271 @@ $background-white-hover: #e2ecf5;
 // needs refactoring
 
 .header {
-    background: $blue;
-    color: #fff;
-    padding: 0.3rem 0;
-    font-size: 0.7rem;
-    text-transform: capitalize;
-    &--wrapper {
-        max-width: 90vw;
-        margin: 0 auto;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 100%;
-        &--contact,
-        &--help {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            text-align: center;
-            > div {
-                padding: 0.4rem;
-            }
-            :hover {
-                color: $red;
-            }
-        }
+  background: $blue;
+  color: #fff;
+  padding: 0.3rem 0;
+  font-size: 0.7rem;
+  text-transform: capitalize;
+  &--wrapper {
+    max-width: 90vw;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    &--contact,
+    &--help {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      text-align: center;
+      > div {
+        padding: 0.4rem;
+      }
+      :hover {
+        color: $red;
+      }
     }
+  }
 }
 .navbar {
-    background-color: #fff;
-    height: 5rem;
-    position: sticky;
-    top: 0;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-    z-index: 999;
-    &--wrapper {
+  background-color: #fff;
+  height: 5rem;
+  position: sticky;
+  top: 0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+  z-index: 999;
+  &--wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    &--header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      &--logo {
+        margin-right: 0.7rem;
+      }
+      &--category {
         display: flex;
         align-items: center;
-        justify-content: space-between;
-        height: 100%;
-        &--header {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            &--logo {
-                margin-right: 0.7rem;
-            }
-            &--category {
-                display: flex;
-            }
-        }
-
-        &--search {
-            width: 100%;
-
-            &--container {
-                width: 80%;
-                margin: 0 auto;
-                padding: 1px;
-                border: 0.5px solid rgba(0, 0, 0, 0.4);
-                border-radius: 5rem;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                &--icon {
-                    display: flex;
-                    align-items: flex-end;
-                    margin: auto;
-                }
-                &--searchbox {
-                    width: 70%;
-                    input {
-                        height: 2.5rem;
-                        width: 100%;
-                        border: none;
-
-                        &:focus-visible {
-                            outline: none;
-                        }
-                    }
-                }
-                &--dropdown {
-                    padding-left: 1rem;
-                    margin: auto;
-                    border-left: 1px solid #a9b0c0;
-                    position: relative;
-
-                    & > div {
-                        display: flex;
-                        align-items: center;
-                        cursor: pointer;
-                        .dropdown--icon {
-                            display: flex;
-                            align-items: center;
-                            transition: 0.2s ease-in-out;
-                            margin-left: 2px;
-                        }
-                    }
-                    .dropdown-links {
-                        position: absolute;
-                        top: 2.5rem;
-                        right: -1rem;
-                        padding-top: 0.5rem;
-                        padding-bottom: 0.5rem;
-                        min-width: 180px;
-                        border-radius: 6px;
-                        background-color: rgb(255, 255, 255);
-                        box-shadow: 0px 6px 12px #00000029;
-                        z-index: 100;
-
-                        li {
-                            margin: 0rem 0;
-                            padding: 0.5rem 1rem;
-                            color: #7d879c;
-                            font-size: 14px;
-                            &:hover {
-                                background: $background-white;
-                                color: $red;
-                                cursor: pointer;
-                            }
-                        }
-                    }
-
-                    h4 {
-                        font-weight: lighter;
-                        font-size: 14px;
-                        color: #7d879c;
-                    }
-                }
-                &:hover {
-                    border: 1px solid black;
-                }
-                &:focus-within {
-                    border: 0.2px solid $red;
-                }
-            }
-        }
-        &--icons {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            gap: 15px;
-            .navicon {
-                background: $background-white;
-                display: grid;
-                place-items: center;
-                height: 2.5rem;
-                width: 2.5rem;
-                text-align: center;
-                text-decoration: none;
-                border-radius: 50%;
-                position: relative;
-                cursor: pointer;
-                &:hover {
-                    background: $background-white-hover;
-                }
-                //tooltip
-                // &:hover::after {
-                //     content: attr(data-tooltip);
-                //     position: absolute;
-                //     display: block;
-                //     left: 50%;
-                //     transform: translateX(-50%);
-                //     bottom: -30px;
-                //     background: #ffffff;
-                //     box-shadow: 0 0 5px rgba(0, 0, 0, 0.18);
-                //     border-radius: 0.5em;
-                //     font-size: 14px;
-                //     color: #808080;
-                //     padding: 2px 10px;
-                //     white-space: nowrap;
-                //     z-index: 95;
-                // }
-            }
-            .navicon--badge {
-                position: absolute;
-                width: 1.2rem;
-                font-size: x-small;
-                padding: 0.2rem;
-                border-radius: 50%;
-                background-color: $red;
-                color: #f6f9fc;
-                top: -7px;
-                right: -5px;
-            }
-            .profile--dropdown {
-                position: absolute;
-                top: 50px;
-                left: -100%;
-                z-index: 99;
-                background-color: #fff;
-                padding: 10px 0;
-                box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-                border-radius: 0.5em;
-                &::before {
-                    content: "";
-                    position: absolute;
-                    display: block;
-                    border: solid;
-                    border-color: rgb(0, 0, 0) transparent;
-                    border-color: rgba(98, 98, 98, 0.2) transparent;
-                    border-width: 0 0.5em 0.5em 0.5em;
-                    top: -8px;
-                    left: 60px;
-                    transform: translateX(-50%);
-                    z-index: 99;
-                }
-                &--link {
-                    display: flex;
-                    align-items: center;
-                    gap: 8px;
-                    color: #515151;
-                    padding: 5px 15px 8px 8px;
-                    cursor: pointer;
-                    &:hover {
-                        color: $red;
-                        & > span {
-                            & > svg {
-                                path {
-                                    fill: $red;
-                                }
-                            }
-                        }
-                    }
-                    & > span {
-                        min-width: 31px;
-                        display: grid;
-                        place-items: center;
-                    }
-                }
-            }
-        }
-    }
-    .mouse-pointer {
+        position: relative;
         cursor: pointer;
-        pointer-events: none;
+        .menu-dropdown {
+          position: absolute;
+          top: 3.4rem;
+          left: -186px;
+          padding-top: 0.5rem;
+          padding-bottom: 0.5rem;
+          height: 344px;
+          min-width: 230px;
+          border-radius: 0 0 6px 6px;
+          background-color: rgb(255, 255, 255);
+          box-shadow: 0px 10px 12px #00000010;
+          z-index: 100;
+          & > li {
+            margin: 0rem 0;
+            padding: 0.5rem 1.5rem;
+            color: #7d879c;
+            font-size: 14px;
+            &:hover {
+              background: $background-white;
+              color: $red;
+              cursor: pointer;
+            }
+          }
+        }
+      }
     }
-    .rotate {
-        transform: rotate(180deg);
+
+    &--search {
+      width: 100%;
+
+      &--container {
+        width: 80%;
+        margin: 0 auto;
+        padding: 1px;
+        border: 0.5px solid rgba(0, 0, 0, 0.4);
+        border-radius: 5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &--icon {
+          display: flex;
+          align-items: flex-end;
+          margin: auto;
+        }
+        &--searchbox {
+          width: 70%;
+          input {
+            height: 2.5rem;
+            width: 100%;
+            border: none;
+
+            &:focus-visible {
+              outline: none;
+            }
+          }
+        }
+        &--dropdown {
+          padding-left: 1rem;
+          margin: auto;
+          border-left: 1px solid #a9b0c0;
+          position: relative;
+
+          & > div {
+            display: flex;
+            align-items: center;
+            cursor: pointer;
+            .dropdown--icon {
+              display: flex;
+              align-items: center;
+              transition: 0.2s ease-in-out;
+              margin-left: 2px;
+            }
+          }
+          .dropdown-links {
+            position: absolute;
+            top: 2.5rem;
+            right: -1rem;
+            padding-top: 0.5rem;
+            padding-bottom: 0.5rem;
+            min-width: 180px;
+            border-radius: 6px;
+            background-color: rgb(255, 255, 255);
+            box-shadow: 0px 6px 12px #00000029;
+            z-index: 100;
+
+            li {
+              margin: 0rem 0;
+              padding: 0.5rem 1rem;
+              color: #7d879c;
+              font-size: 14px;
+              &:hover {
+                background: $background-white;
+                color: $red;
+                cursor: pointer;
+              }
+            }
+          }
+
+          h4 {
+            font-weight: lighter;
+            font-size: 14px;
+            color: #7d879c;
+          }
+        }
+        &:hover {
+          border: 1px solid black;
+        }
+        &:focus-within {
+          border: 0.2px solid $red;
+        }
+      }
     }
+    &--icons {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      gap: 15px;
+      .navicon {
+        background: $background-white;
+        display: grid;
+        place-items: center;
+        height: 2.5rem;
+        width: 2.5rem;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 50%;
+        position: relative;
+        cursor: pointer;
+        &:hover {
+          background: $background-white-hover;
+        }
+        //tooltip
+        // &:hover::after {
+        //     content: attr(data-tooltip);
+        //     position: absolute;
+        //     display: block;
+        //     left: 50%;
+        //     transform: translateX(-50%);
+        //     bottom: -30px;
+        //     background: #ffffff;
+        //     box-shadow: 0 0 5px rgba(0, 0, 0, 0.18);
+        //     border-radius: 0.5em;
+        //     font-size: 14px;
+        //     color: #808080;
+        //     padding: 2px 10px;
+        //     white-space: nowrap;
+        //     z-index: 95;
+        // }
+      }
+      .navicon--badge {
+        position: absolute;
+        width: 1.2rem;
+        font-size: x-small;
+        padding: 0.2rem;
+        border-radius: 50%;
+        background-color: $red;
+        color: #f6f9fc;
+        top: -7px;
+        right: -5px;
+      }
+      .profile--dropdown {
+        position: absolute;
+        top: 50px;
+        left: -100%;
+        z-index: 99;
+        background-color: #fff;
+        padding: 10px 0;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        border-radius: 0.5em;
+        &::before {
+          content: "";
+          position: absolute;
+          display: block;
+          border: solid;
+          border-color: rgb(0, 0, 0) transparent;
+          border-color: rgba(98, 98, 98, 0.2) transparent;
+          border-width: 0 0.5em 0.5em 0.5em;
+          top: -8px;
+          left: 60px;
+          transform: translateX(-50%);
+          z-index: 99;
+        }
+        &--link {
+          display: flex;
+          align-items: center;
+          gap: 8px;
+          color: #515151;
+          padding: 5px 15px 8px 8px;
+          cursor: pointer;
+          &:hover {
+            color: $red;
+            & > span {
+              & > svg {
+                path {
+                  fill: $red;
+                }
+              }
+            }
+          }
+          & > span {
+            min-width: 31px;
+            display: grid;
+            place-items: center;
+          }
+        }
+      }
+    }
+  }
+  .mouse-pointer {
+    cursor: pointer;
+    pointer-events: none;
+  }
+  .rotate {
+    transform: rotate(180deg);
+  }
 }
