navbar bottom added

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -1,6 +1,7 @@
 @import "./variables";
 @import "./mixins";
 @import "./globals";
+@import "../components/navbar/navbar";
 @import "../components/Product/product";
 @import "../components/SideCart/sideBarCart";
 @import "../components/Modal/LoginModal/loginModal";
@@ -13,3 +14,4 @@
 @import "../components/Profile/Information/information";
 @import "../components/Profile/Order/order";
 @import "../components/Home/Banner/topBanner";
+@import "../components/navbar/BottomNavbar/bottomNavbar";
