--- a/client/src/components/Home/Banner/_topBanner.scss
+++ b/client/src/components/Home/Banner/_topBanner.scss
@@ -1,7 +1,7 @@
 .top-banner-section {
   position: relative;
   height: 344px;
-  border-radius: 0 0 6px 6px;
+  border-radius: 8px;
   @media (max-width: 1026px) {
     height: 270px;
   }
