--- a/client/src/components/Product/_product.scss
+++ b/client/src/components/Product/_product.scss
@@ -1,191 +1,192 @@
 .product {
-    background-color: $background-white;
-    min-height: 100vh;
-    &__top {
-        padding-bottom: 100px;
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 2vw;
-        &__left {
-            &__imgActive {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 50px 20px;
-                img {
-                    width: 300px;
-                    height: 300px;
-                    object-fit: contain;
-                }
-            }
-            &__imgGallery {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                div {
-                    border: 1px solid lightgray;
-                    margin: 0px 10px;
-                    border-radius: 10px;
-                    padding: 10px;
-                    cursor: pointer;
-                    &.active {
-                        border: 1px solid $red;
-                        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-                    }
-                    > img {
-                        width: 50px;
-                        height: 50px;
-                    }
-                }
-            }
+  background-color: $background-white;
+  min-height: 100vh;
+  &__top {
+    padding-bottom: 100px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2vw;
+    &__left {
+      &__imgActive {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 50px 20px;
+        img {
+          width: 300px;
+          height: 300px;
+          object-fit: contain;
         }
-        &__right {
-            padding: 60px 20px;
-            h1 {
-                color: $black;
-                font-weight: 700;
-                @include toRem(font-size, 30);
-                letter-spacing: 2px;
-                margin-bottom: 20px;
-            }
-            > p {
-                margin-bottom: 20px;
-                span {
-                    color: $light-gray;
-                    @include toRem(font-size, 14);
-                }
-                &:nth-of-type(3) {
-                    color: $red;
-                    @include toRem(font-size, 25);
-                    font-weight: 700;
-
-                    margin-bottom: 5px;
-                    > span {
-                        font-size: 16px;
-                    }
-                    & + p {
-                        color: rgb(139, 138, 138);
-                        @include toRem(font-size, 14);
-                    }
-                }
-            }
-            &__sizes {
-                > p {
-                    span {
-                        color: $light-gray;
-                    }
-                }
-                > div {
-                    display: flex;
-                    gap: 10px;
-                    margin: 20px 0px;
-                    > p {
-                        background-color: rgba(211, 211, 211, 0.381);
-                        padding: 7px 20px;
-                        border-radius: 5px;
-                        cursor: pointer;
-
-                        &.active {
-                            border: 2px solid $red;
-                            background-color: white;
-                        }
-                    }
-                }
-            }
-            &__colors {
-                > p {
-                    text-transform: capitalize;
-                    span {
-                        color: $light-gray;
-                    }
-                }
-                > div {
-                    display: flex;
-                    align-items: center;
-                    gap: 10px;
-                    margin: 10px 0px;
-                    > span {
-                        position: relative;
-                        width: 30px;
-                        height: 30px;
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        border-radius: 50%;
-                        cursor: pointer;
-                        > span {
-                            width: 22px;
-                            height: 22px;
-                            border-radius: 50%;
-                        }
-                    }
-                    .active {
-                        border: 2px solid $red;
-                    }
-                }
-            }
-            &__cartButton {
-                display: flex;
-                align-items: center;
-                margin-top: 30px;
-                margin-bottom: 50px;
-                button {
-                    margin-right: 20px;
-                }
-                p {
-                    margin-right: 15px;
-                    color: $light-gray;
-                }
-                .add--to--cart {
-                    display: flex;
-                    flex-direction: row;
-                    align-items: center;
-                    justify-content: space-around;
-
-                    .cart--icon--wrapper {
-                        display: grid;
-                        padding: 1px 15px;
-                        font-size: 26px;
-                        font-weight: 700;
-                        color: $red;
-                        border-radius: 8px;
-                        box-shadow: 0 0 2px rgba(233, 69, 96, 0.418);
-                        transition: 0.2s ease-in-out;
-                        user-select: none;
-                        cursor: pointer;
-                        &:hover {
-                            color: #fff;
-                            background-color: $red;
-                        }
-                    }
-                    .counter-text {
-                        padding: 5px 0;
-                        font-size: 14px;
-                        margin: 0px 13px;
-                        font-weight: 600;
-                        user-select: none;
-                    }
-                }
-            }
+      }
+      &__imgGallery {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        div {
+          border: 1px solid lightgray;
+          margin: 0px 10px;
+          border-radius: 10px;
+          padding: 10px;
+          cursor: pointer;
+          &.active {
+            border: 1px solid $red;
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          }
+          > img {
+            width: 50px;
+            height: 50px;
+          }
         }
+      }
     }
+    &__right {
+      padding: 60px 20px;
+      h1 {
+        color: $black;
+        font-weight: 700;
+        @include toRem(font-size, 30);
+        letter-spacing: 2px;
+        margin-bottom: 20px;
+      }
+      > p {
+        margin-bottom: 20px;
+        span {
+          color: $light-gray;
+          @include toRem(font-size, 14);
+        }
+        &:nth-of-type(3) {
+          color: $red;
+          @include toRem(font-size, 25);
+          font-weight: 700;
 
-    &__bottom {
-        &__switch {
+          margin-bottom: 5px;
+          > span {
+            font-size: 16px;
+          }
+          & + p {
+            color: rgb(139, 138, 138);
+            @include toRem(font-size, 14);
+          }
+        }
+      }
+      &__sizes {
+        > p {
+          span {
+            color: $light-gray;
+          }
+        }
+        > div {
+          display: flex;
+          gap: 10px;
+          margin: 20px 0px;
+          > p {
+            background-color: rgba(211, 211, 211, 0.381);
+            padding: 7px 20px;
+            border-radius: 5px;
+            border: 2px solid transparent;
+            cursor: pointer;
+
+            &.active {
+              border: 2px solid $red;
+              background-color: white;
+            }
+          }
+        }
+      }
+      &__colors {
+        > p {
+          text-transform: capitalize;
+          span {
+            color: $light-gray;
+          }
+        }
+        > div {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          margin: 10px 0px;
+          > span {
+            position: relative;
+            width: 30px;
+            height: 30px;
             display: flex;
-            border-bottom: 1px solid lightgray;
-            > p {
-                color: $light-gray;
-                @include toRem(font-size, 16);
-                padding: 7px 8px;
-                font-weight: 600;
-                margin-right: 20px;
-                cursor: pointer;
-                &.active {
-                    color: $red;
-                    border-bottom: 2px solid $red;
-                }
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            cursor: pointer;
+            > span {
+              width: 22px;
+              height: 22px;
+              border-radius: 50%;
             }
+          }
+          .active {
+            border: 2px solid $red;
+          }
         }
+      }
+      &__cartButton {
+        display: flex;
+        align-items: center;
+        margin-top: 30px;
+        margin-bottom: 50px;
+        button {
+          margin-right: 20px;
+        }
+        p {
+          margin-right: 15px;
+          color: $light-gray;
+        }
+        .add--to--cart {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: space-around;
+
+          .cart--icon--wrapper {
+            display: grid;
+            padding: 1px 15px;
+            font-size: 26px;
+            font-weight: 700;
+            color: $red;
+            border-radius: 8px;
+            box-shadow: 0 0 2px rgba(233, 69, 96, 0.418);
+            transition: 0.2s ease-in-out;
+            user-select: none;
+            cursor: pointer;
+            &:hover {
+              color: #fff;
+              background-color: $red;
+            }
+          }
+          .counter-text {
+            padding: 5px 0;
+            font-size: 14px;
+            margin: 0px 13px;
+            font-weight: 600;
+            user-select: none;
+          }
+        }
+      }
     }
+  }
+
+  &__bottom {
+    &__switch {
+      display: flex;
+      border-bottom: 1px solid lightgray;
+      > p {
+        color: $light-gray;
+        @include toRem(font-size, 16);
+        padding: 7px 8px;
+        font-weight: 600;
+        margin-right: 20px;
+        cursor: pointer;
+        &.active {
+          color: $red;
+          border-bottom: 2px solid $red;
+        }
+      }
+    }
+  }
 }
