--- a/client/src/components/navbar/_navbar.scss
+++ b/client/src/components/navbar/_navbar.scss
@@ -38,7 +38,7 @@ $background-white-hover: #e2ecf5;
   height: 5rem;
   position: sticky;
   top: 0;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+  // box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
   z-index: 999;
   &--wrapper {
     display: flex;
@@ -51,6 +51,7 @@ $background-white-hover: #e2ecf5;
       justify-content: space-between;
       &--logo {
         margin-right: 0.7rem;
+        margin-top: 0.4rem;
       }
       &--category {
         display: flex;
@@ -59,15 +60,15 @@ $background-white-hover: #e2ecf5;
         cursor: pointer;
         .menu-dropdown {
           position: absolute;
-          top: 3.4rem;
-          left: -186px;
+          top: 2.5rem;
+          left: 0;
           padding-top: 0.5rem;
           padding-bottom: 0.5rem;
           height: 344px;
           min-width: 230px;
-          border-radius: 0 0 6px 6px;
+          border-radius: 8px;
           background-color: rgb(255, 255, 255);
-          box-shadow: 0px 10px 12px #00000010;
+          box-shadow: 0px 3px 12px #0000001b;
           z-index: 100;
           & > li {
             margin: 0rem 0;
