--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -20,3 +20,4 @@ $error: #ff0000;
 $profile-text-color: #565656;
 $profile-text-color-hover: #1276d3;
 $profile-background-hover: #e4edf7;
+$dark-gray: #5b5b5b;
