--- a/client/src/components/navbar/BottomNavbar/_bottomNavbar.scss
+++ b/client/src/components/navbar/BottomNavbar/_bottomNavbar.scss
@@ -21,6 +21,16 @@
         padding: 0 5px;
         color: $dark-gray;
       }
+      .down-icon {
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 3px;
+        transition: 0.1s;
+      }
+      .rotate {
+        transform: rotate(-90deg);
+      }
     }
     &-dropdown {
       position: absolute;
@@ -35,6 +45,9 @@
       box-shadow: 0px 2px 12px #00000013;
       z-index: 100;
       & > li {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
         margin: 0rem 0;
         padding: 0.5rem 1.5rem;
         color: #7d879c;
@@ -91,6 +104,9 @@
           }
         }
       }
+    }
+    .active-category {
+      box-shadow: 0 2px 3px rgba(8, 8, 8, 0.2);
     }
   }
 }
