--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -13,3 +13,4 @@
 @import "../components/Profile/Information/information";
 @import "../components/Profile/Order/order";
 @import "../pages/checkout";
+@import "../components/Checkout/Cart/cartitem";
