--- a/client/src/components/Admin/Navigation/_navigation.scss
+++ b/client/src/components/Admin/Navigation/_navigation.scss
@@ -1,6 +1,7 @@
 .admin__sideNav {
   background-color: $admin-card-bg;
   height: 100vh;
+  min-width: 200px;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   padding: 30px 20px;
   display: flex;
@@ -38,6 +39,7 @@
 
         span {
           color: $red !important;
+          font-weight: 500;
         }
       }
       .MuiSvgIcon-root {
@@ -71,23 +73,9 @@
         gap: 10px;
         font-size: 16px;
         color: $admin-text;
-        font-weight: 500;
+        font-weight: 400;
         > p {
           flex: 1;
-        }
-      }
-    }
-    &__sub {
-      padding: 10px 0px;
-      display: flex;
-      flex-direction: column;
-      margin-left: 25px;
-      color: $admin-text;
-      > li {
-        font-size: 14px;
-        padding: 2px 10px;
-        &:hover {
-          color: $red;
         }
       }
     }
