--- a/client/src/pages/_checkout.scss
+++ b/client/src/pages/_checkout.scss
@@ -24,4 +24,13 @@
       color: white;
     }
   }
+
+  // cartitems
+  &--cartitems {
+    display: flex;
+    flex-direction: column;
+    & > * {
+      margin-bottom: 1.5rem;
+    }
+  }
 }
