--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -12,4 +12,7 @@
 @import "../components/Profile/Address/address";
 @import "../components/Profile/Information/information";
 @import "../components/Profile/Order/order";
+@import "../pages/checkout";
+@import "../components//Checkout/Cart/cartitem";
 @import "../components/Home/Banner/topBanner";
+@import "../components/Checkout/Cart/cartform";
